# web

./: .gitignore  README.md
.github/workflows/: pages.yml
brand/email/: README.md  waitlist-welcome.html  waitlist-welcome.txt
brand/social/: COPY.md  render.sh
brand/social/templates/: README.md
npm/: README.md  index.js  package.json
pypi/: README.md  pyproject.toml
pypi/src/shipvane/: __init__.py
site/: CNAME  index.html
